@@ -1,4 +1,5 @@
 0.8.4
+- Mask signals from deadman's switch
 
 0.8.3
 - Add audit support for the linux-4.15 kernel
